<?xml version="1.0" encoding="utf-8"?><android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:background="#FFA500">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentTop="true">
        <TextView
            android:id="@+id/ShowTuitionDateTextView"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center_vertical"
            android:paddingLeft="5dp"
            android:paddingRight="0dp"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            android:text="@string/date_example"/>

        <ImageButton
            android:id="@+id/DeleteTuitionDateImageButton"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:src="@android:drawable/ic_delete"
            android:background="@null"
            android:contentDescription="@string/delete_tuition_day" />

    </RelativeLayout>

    <TextView
        android:id="@+id/ShowParticularTuitionDateComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/writeComment"
        android:layout_marginTop="20dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="2dp"
        android:paddingTop="2dp"
        android:background="@null"/>

</android.support.v7.widget.CardView>